0.1: Italy


- Added the Western Roman Empire and its leader.
- Added Odoacer.

- Added Dagger in the Beast's back ideas and events for Odoacer.

- Added National Spirits for the Wester Roman Empire:
    * Crippling Corruption
    * Aftermath of the Third Century


0.2: Gaul

- Added the Kingdom of Soissons
- Added the Visigoths
- Added the Franks

- Added more states for more accurate borders:
    * East Rhineland

- Changed states to follow natural borders:
    * Rhineland
    * Gelderland
    * Moselland
    * Wuttemburg
    * Upper Austria