@@ -8,7 +8,7 @@ state={
 	
 
 	history={
-		owner = WRE
+		owner = TEM
 		victory_points = { 3838 1 }
 		buildings = {
 			infrastructure = 2
@@ -18,7 +18,7 @@ state={
 				naval_base = 3
 			}
 		}
-		add_core_of = WRE
+		add_core_of = TEM
 	}
 
 	provinces={
