@@ -6,7 +6,7 @@ state = {
 	state_category = town
 	
 	history = {
-		owner = WRE
+		owner = TEM
 		victory_points = {
 			11773 3 
 		}
@@ -25,8 +25,7 @@ state = {
 				naval_base = 5
 			}
 		}
-		add_core_of = WRE
-		add_core_of = WRE
+		add_core_of = TEM
 	}
 	provinces = {
 		902 6891 9772 9863 11755 11773 11824 11874 	
