@@ -4,7 +4,7 @@ state = {
 	name = "STATE_115"
 
 	history = {
-		owner = WRE
+		owner = TEM
 		victory_points = {
 			10074 20 
 		}
@@ -40,8 +40,7 @@ state = {
 			}
 
 		}
-		add_core_of = WRE
-
+		add_core_of = TEM
 	}
 
 	provinces = {
