@@ -1,0 +1,12 @@
+﻿
+SOI: "Soissons"
+SOI_DEF: "Soissons"
+SOI_ADJ: "Soissons"
+
+VIS: "Visiogthic Kingdom"
+VIS_DEF: "Kingdom of the Visigoths"
+VIS_ADJ: "Visigoth"
+
+FRK: "Frankish Kingdom"
+FRK_DEF: "Frankish Kingdom"
+FRK_ADJ: "Frankish"
