@@ -11,3 +11,5 @@ add soissons and franks and other countries:
     * war 
     * focus tree
     * couple events
+
+finish flags
